--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {font-family: "Lato", sans-serif}
 </style>
 <body>
     <header>
+        
       <nav>
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
@@ -22,7 +23,7 @@ body {font-family: "Lato", sans-serif}
     </header>
     <section id="home">
       <div class="container reveal">
-        <h1>Watch the Nav Bar as you Scroll Down &#8595;</h1>
+        <h1>Hello...Welcome to Give Gaurdian &#8595;</h1>
       </div>
     </section>
     <section id="about">
@@ -30,27 +31,13 @@ body {font-family: "Lato", sans-serif}
         <h2>About</h2>
         <div class="text-container">
           <div class="text-box">
-            <h3>Section Text</h3>
+            <h3>Little bit about us</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-              eius molestiae perferendis eos provident vitae iste. Lorem ipsum
-              dolor sit amet consectetur adipisicing elit. Quam blanditiis,
-              officiis, voluptate quisquam aperiam nobis est, quis neque esse
-              soluta dolores iste sit corrupti! Magnam, delectus qui. Odit,
-              accusamus doloremque.
+                Empowering Trustworthy Giving for Lasting Impact
             </p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex est
-              rerum id quis eaque rem suscipit reprehenderit quaerat vero
-              nesciunt?
-            </p>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Voluptatum, eaque voluptatibus. Eaque tempore quam nesciunt. Lorem
-              ipsum dolor sit amet consectetur adipisicing elit. Eum adipisci
-              blanditiis assumenda atque officiis? Vel, fuga facilis quia
-              reprehenderit nihil optio harum. Quo sapiente veniam atque
-              corporis tempora non repellat?
+                At Give Gaurdian,  our mission is to revolutionize charitable giving by providing a secure platform that empowers users to confidently support authorized and trustworthy charities.
+                 We are committed to ensuring that every donation makes a positive impact, backed by our pledge to guarantee refunds in case of unforeseen issues. By championing transparency, accountability, and the highest standards of credibility, we aim to create a community of compassionate donors who can change lives with complete confidence. Together, let's build a world where every act of kindness leads to lasting change.
             </p>
           </div>
         </div>
@@ -107,6 +94,31 @@ body {font-family: "Lato", sans-serif}
         </div>
       </div>
     </section>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Donate</a>
+                <a href="#">Trust and Guarantee</a>
+                <a href="#">Impact</a>
+                <a href="#">FAQ</a>
+                <a href="#">Contact Us</a>
+                <a href="#">Blog</a>
+            </div>
+            <div class="footer-links">
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Get Involved</a>
+                <a href="#">Testimonials</a>
+                <a href="#">Resources</a>
+                <a href="#">Account/Login</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 Give Gaurdian. All rights reserved.</p>
+        </div>
+    </footer>
     </body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
           <script src="js/script.js"></script>
