--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Give Gaurdian</title>
+<title>Give Guardian</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
     </header>
     <section id="home">
       <div class="container reveal">
-        <h1>Hello...Welcome to Give Gaurdian &#8595;</h1>
+        <h1>Hello...Welcome to Give Guardian &#8595;</h1>
       </div>
     </section>
     <section id="about">
@@ -36,7 +36,7 @@ body {font-family: "Lato", sans-serif}
                 Empowering Trustworthy Giving for Lasting Impact
             </p>
             <p>
-                At Give Gaurdian,  our mission is to revolutionize charitable giving by providing a secure platform that empowers users to confidently support authorized and trustworthy charities.
+                At Give Guardian,  our mission is to revolutionize charitable giving by providing a secure platform that empowers users to confidently support authorized and trustworthy charities.
                  We are committed to ensuring that every donation makes a positive impact, backed by our pledge to guarantee refunds in case of unforeseen issues. By championing transparency, accountability, and the highest standards of credibility, we aim to create a community of compassionate donors who can change lives with complete confidence. Together, let's build a world where every act of kindness leads to lasting change.
             </p>
           </div>
@@ -116,7 +116,7 @@ body {font-family: "Lato", sans-serif}
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 Give Gaurdian. All rights reserved.</p>
+            <p>&copy; 2023 Give Guardian. All rights reserved.</p>
         </div>
     </footer>
     </body>
