--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
     </header>
     <section id="home">
       <div class="container reveal">
-        <h1>Hello...Welcome to Give Guardian &#8595;</h1>
+        <h1>Hello there...Welcome to Give Guardian &#8595;</h1>
       </div>
     </section>
     <section id="about">
