some layout and media queries added

--- a/index.html
+++ b/index.html
@@ -28,22 +28,26 @@ body {font-family: "Lato", sans-serif}
     </section>
     <section id="about">
       <div class="container reveal">
-        <h2>About</h2>
-        <div class="text-container">
-          <div class="text-box">
-            <h3>Little bit about us</h3>
-            <p>
-                Empowering Trustworthy Giving for Lasting Impact
-            </p>
-            <p>
-                At Give Guardian,  our mission is to revolutionize charitable giving by providing a secure platform that empowers users to confidently support authorized and trustworthy charities.
-                 We are committed to ensuring that every donation makes a positive impact, backed by our pledge to guarantee refunds in case of unforeseen issues. By championing transparency, accountability, and the highest standards of credibility, we aim to create a community of compassionate donors who can change lives with complete confidence. Together, let's build a world where every act of kindness leads to lasting change.
-            </p>
+          <h2>About</h2>
+          <div class="flex-container">
+              <div class="gif-container">
+                  <img src="images/chrome_giphy.gif" alt="Giphy">
+              </div>
+              <div class="text-container">
+                  <div class="text-box">
+                      <h3>Little bit about us</h3>
+                      <p>
+                          Empowering Trustworthy Giving for Lasting Impact
+                      </p>
+                      <p>
+                          At Give Guardian, our mission is to revolutionize charitable giving by providing a secure platform that empowers users to confidently support authorized and trustworthy charities.
+                          We are committed to ensuring that every donation makes a positive impact, backed by our pledge to guarantee refunds in case of unforeseen issues. By championing transparency, accountability, and the highest standards of credibility, we aim to create a community of compassionate donors who can change lives with complete confidence. Together, let's build a world where every act of kindness leads to lasting change.
+                      </p>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
-    </section>
-  
+  </section>
     <section id="services">
       <div class="container reveal">
         <h2>Services</h2>
