--- a/index.html
+++ b/index.html
@@ -19,8 +19,29 @@ body {font-family: "Lato", sans-serif}
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
+
+        <button aria-label="Toggle menu" class="nav-button button-lines button-lines-x close" role="button" type="button">
+          <span class="lines"></span>
+        </button>
       </nav>
     </header>
+    <nav class="nav-wrapper">
+      <ul class="nav">
+        <li class="active">
+          <a href="#">Page 1</a>
+        </li>
+        <li>
+          <a href="#">Page 2</a>
+        </li>
+        <li>
+          <a href="#">Page 3</a>
+        </li>
+        <li>
+          <a href="#">Page 4</a>
+        </li>
+      </ul>
+      <span class="nav-marker color-1"></span>
+    </nav>
     <section id="home">
       <div class="container reveal">
         <h1>Hello there...Welcome to Give Guardian &#8595;</h1>
@@ -123,9 +144,9 @@ body {font-family: "Lato", sans-serif}
             <p>&copy; 2023 Give Guardian. All rights reserved.</p>
         </div>
     </footer>
-    </body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
           <script src="js/script.js"></script>
+          <script src="js/popup.js"></script>
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -137,4 +158,6 @@ body {font-family: "Lato", sans-serif}
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    </body>
+    
     </html>
