--- a/index.html
+++ b/index.html
@@ -57,13 +57,9 @@
 
           <div class="header">
             <div class="logo-name">
-              <img class="logo" src="images/Give_Guardian_LOGO_2000x2000.png" alt="Logo">
+              <img class="logo" src="images/Give_Guardian_LOGO_2000x2000.png" alt="Logo" width="200px" height="100px">
               <div class="name">Give Guardian</div>
             </div>
-            <!-- <div class="icons">
-              <img class="settings-icon" src="images/settings_icon.png" alt="Settings">
-              <img class="profile-icon" src="images/person_icon.png" alt="Profile">
-            </div> -->
             <span class="close-btn" id="close-btn">&times;</span>
           </div>
           <div id="popup-content-container">
@@ -102,10 +98,10 @@
             </div>
             <div class="image-container">
               <div class="image">
-                <img src="images/verified_giphy.gif" alt="Image 1" width="30%" height="60%">
+                <img src="images/tick_giphy.gif" alt="Image 1" width="80%" height="80%">
               </div>
               <div class="image">
-                <img src="images/image_donate.png" alt="Image 2" width="30%" height="60%">
+                <img src="images/donate_giphy.gif" alt="Image 2" width="80%" height="60%">
               </div>
             </div>
 
@@ -145,10 +141,10 @@
                 <p>Similar</p>
               </div>
               <div class="scroll-container">
-                <img src="images/img_mountain.jpg" alt="Cinque Terre">
-                <img src="images/img_mountain.jpg" alt="Forest">
-                <img src="images/img_mountain.jpg" alt="Northern Lights">
-                <img src="images/img_mountain.jpg" alt="Mountains">
+                <img src="images/carousel_image_1.png" alt="Cinque Terre">
+                <img src="images/carousel_image_2.png" alt="Forest">
+                <img src="images/carousel_image_3.png" alt="Northern Lights">
+                <img src="images/carousel_image_4.png" alt="Mountains">
               </div>
             </div>
 
@@ -165,6 +161,7 @@
   <div class="container">
     <section id="home">
       <div class="container reveal">
+        <img src="images/Give_Guardian_LOGO_2000x2000.png" alt="Welcome Image" width="350px" height="300px">
         <h1>Hello there...Welcome to Give Guardian</h1>
       </div>
 
