--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <h2>About Give Guardian</h2>
       <div class="flex-container">
         <div class="gif-container">
-          <img src="images/chrome_giphy.gif" alt="Giphy">
+          <img src="images/figma_giveguardian.gif" alt="Giphy">
         </div>
         <div class="text-container">
           <div class="text-box">
