--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <div class="container">
     <section id="home">
       <div class="container reveal">
-        <img src="images/Give_Guardian_LOGO_2000x2000.png" alt="Welcome Image" width="350px" height="300px">
+        <img src="images/Give_Guardian_LOGO_2000x2000 (1).png" alt="Welcome Image" width="500px" height="300px">
         <h1>Hello there...Welcome to Give Guardian</h1>
       </div>
 
